--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera! What's up? Hahah, this is working!</h1>
-
+<h1>Hello Coursera! What's up? Hahah, this is it :))</h1>
 </body>
 </html>
